{
    "name": "InputActions",
    "maps": [
        {
            "name": "GameController",
            "id": "ce8de0c1-f8a2-4591-b34d-9850fe84ae66",
            "actions": [
                {
                    "name": "moveCamera",
                    "type": "Value",
                    "id": "db827366-dfed-4769-ac4e-81123f35c8c8",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "movePresets",
                    "type": "Button",
                    "id": "89fc19a8-ad20-4e2c-b359-b77ce0c5fcec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "whiteBalanceOnePush",
                    "type": "Button",
                    "id": "b1e1c1a2-0000-4000-8000-000000000004",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "focusOnePush",
                    "type": "Button",
                    "id": "b1e1c1a2-0000-4000-8000-000000000003",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectLeftCamera",
                    "type": "Button",
                    "id": "243d11fd-bf70-4722-92d7-1567e45c5c3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectRightCamera",
                    "type": "Button",
                    "id": "04ff09c1-96ec-456a-92e5-683b45d8e301",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "zoomCamera",
                    "type": "Value",
                    "id": "cec84824-1c3f-4d39-891c-d1e28a13ca0e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Save Preset",
                    "type": "Button",
                    "id": "d57800c4-db1f-4449-972a-7eab5c640d20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Execute Preset",
                    "type": "Button",
                    "id": "eddb8ef7-bede-4c63-aa1a-089d645c0083",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "augmentSpeed",
                    "type": "Value",
                    "id": "b1e1c1a2-0000-4000-8000-000000000001",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "showControls",
                    "type": "Button",
                    "id": "c63c0cf9-21af-47d4-ad75-05bb2dcee5b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "cyclePresets",
                    "type": "Button",
                    "id": "e4721340-3202-49c0-a628-e2f9a4f9ebc8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "fullscreenOverlay",
                    "type": "Button",
                    "id": "5b571ef0-193e-489f-814e-ceeaeafb4915",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e340cba-1a31-4e73-b3f6-b9cb47d2f19d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a201bc1-25d7-425f-bd34-38fa53ca76e1",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "selectLeftCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cdb4ce9-ee65-45f9-a956-2688d4fc5aa5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "selectRightCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "837b4850-8e94-4080-9554-acee442f95be",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "zoomCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59c1a13a-a957-42f4-9b39-51c237f6ef74",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save Preset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa4ac144-0666-47f5-b2b9-fbde210c860c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Execute Preset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a113aa7-3539-4d08-9cef-fb1abb7cf9ef",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movePresets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77715de7-7145-423a-b1b6-448ae49f6f09",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movePresets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "957c84b1-e9cb-43a4-ab7d-3db3f287f710",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movePresets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9c9cc2a-bff8-40d1-b399-c1877bbf79de",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movePresets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1e1c1a2-0000-4000-8000-000000000002",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "augmentSpeed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "daee5ea4-4bba-4cec-9bbb-46b46f000353",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "showControls",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d59c8e8-a856-443b-b758-825e6e3d782e",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "cyclePresets",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ff129dd-c2e5-4456-9659-58ece4255275",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "focusOnePush",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17812611-3a68-463b-a88b-a5e96e3b775d",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "whiteBalanceOnePush",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a60b14f-0c96-4288-b599-abf02a36e676",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "fullscreenOverlay",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}